8269523: runtime/Safepoint/TestAbortOnVMOperationTimeout.java failed when expecting 'VM operation took too long'  - dropped 5ms timeout as we have seen execution as low as 2ms  - enabled GC logging  - report output in all cases to allow ease of analysis